Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-124469

qtquick3d examples crash

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.8.0 FF
    • 6.8
    • Quick: 3D
    • None
    • WebAssembly
    • 3c1e9c70d (dev)

      These examples crash when started:

      • bakedlightmap
      • custommaterial
      • custommorphing
      • customshaders
      • morphing
      • principledmaterial
      • sceneeffects
      • screenspacereflections
      • skinning

      All with various errors.

        For Gerrit Dashboard: QTBUG-124469
        # Subject Branch Project Status CR V

            sorvig Morten Sørvig
            lpotter Lorn Potter
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes