wasm: require OpenGL ES 3 / WebGL 2

Generate ES 3 shaders only, for WebAssembly.

spirv-cross uses exceptions to signal shader compilation
errors, which become a fatal error on wasm with exceptions
disabled. This means that compiling targeting ES 2 fails
if ES 3 is available, since Qt Quick 3D then uses ES 3
features.

Fix this by not supporting ES 2 / WebGL 1, which is
in any case not a very good target for Qt Quick 3D on
the web.

Fixes: QTBUG-124469
Change-Id: I9190c811c4d143e42074a601cebafeaf0d323949
Reviewed-by: Even Oscar Andersen <even.oscar.andersen@qt.io>
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>